# llm-translate

./: README.md  pyproject.toml
translate_subtitles/: translate.py
