[project]
name = "translate-subtitles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pysrt>=1.1.2",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[project.scripts]
translate = "translate_subtitles.translate:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

